# aws-sandbox

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: ecs-deploy.yml
