[tool.poetry]
name = "aws-sandbox"
version = "0.1.0"
description = ""
authors = ["Or Levi <orlevi128@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
